<resources>
    <string name="app_name">Acessicorp Map</string>
    <string name="action_settings">Configurações</string>
    <string name="welcome_string">Bem vindo ao aplicativo de mapas acessíveis</string>
    <string name="welcome_button">Onde estou?</string>
    <string name="title_activity_maps">Map</string>
    <string name="warningGPS">Esta aplicação precisa de acesso ao GPS para funcionar corretamente</string>
    <string name="latitude">Latitude</string>
    <string name="aguardando_gps">Aguardando GPS</string>
    <string name="longitude">Longitude</string>
    <string name="buscar_beacons">Buscar beacons</string>
    <string name="limpar_mapa">Limpar mapa</string>
    <string name="scanning">Escaneando</string>
    <string name="scan_finished">Scan Finalizado</string>
</resources>
